--- a/quotation.html
+++ b/quotation.html
@@ -9,6 +9,11 @@
       font-family: Calibri;
       padding: 20px;
     }
+     .header-line {
+    border-bottom: 2px solid black;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+  }
      h1 {
       margin-top: 10px;
       margin-bottom: 0px;
@@ -109,6 +114,7 @@
   <span>: <span id="quote-number"></span></span>
   </div>
   <p style="margin-bottom: 0px; margin-top: 20px; font-size: 20px; font-weight: bold;">Equipments</p>
+  <div class="header-line">
 
   <!-- Tabel Equipments -->
   <div id="equipment-section"></div>
