--- a/quotation.html
+++ b/quotation.html
@@ -100,7 +100,7 @@
 <body>
 
   <h1 id="project-name"></h1>
-  
+ 
   <div class="label-row">
   <span>Submitted To</span>
   <span>: <span id="client-name"></span></span>
@@ -113,7 +113,7 @@
   <span>Quotation Number</span>
   <span>: <span id="quote-number"></span></span>
   </div>
-  <div class="header-line">
+  <div class="header-line"></div>
   <p style="margin-bottom: 0px; margin-top: 20px; font-size: 20px; font-weight: bold;">Equipments</p>
   
 
