--- a/invoice.html
+++ b/invoice.html
@@ -42,16 +42,13 @@
       background-color: #f2f2f2;
     }
 
-    .info-line, .grand-total, .note {
+   .grand-total, .note {
       margin-top: 20px;
       font-size: 16px;
     }
 
     .grand-total {
       font-weight: bold;
-      text-align: right;
-    }
-    .termin, .termin-line {
       text-align: right;
     }
 
@@ -83,7 +80,6 @@
       </tbody>
     </table>
 
-    <div class="info-line" id="termin-line"></div>
     <div class="grand-total" id="grand-total"></div>
     <div class="note" id="grand-total-text"></div>
   </div>
