--- a/invoice.html
+++ b/invoice.html
@@ -42,7 +42,7 @@
       background-color: #f2f2f2;
     }
 
-   .grand-total, .note {
+   .info-line, .grand-total, .note {
       margin-top: 20px;
       font-size: 16px;
     }
@@ -80,6 +80,7 @@
       </tbody>
     </table>
 
+    <div class="info-line"</div>
     <div class="grand-total" id="grand-total"></div>
     <div class="note" id="grand-total-text"></div>
   </div>
