--- a/invoice.html
+++ b/invoice.html
@@ -80,7 +80,7 @@
       </tbody>
     </table>
 
-    <div class="info-line"></div>
+    <div class="info-line" id="termin-line"></div>
     <div class="grand-total" id="grand-total"></div>
     <div class="note" id="grand-total-text"></div>
   </div>
