--- a/invoice.html
+++ b/invoice.html
@@ -131,7 +131,7 @@
     <button onclick="window.print()">Print</button>
   </div>
   <div id="saved-signature"></div>
-  <p style="font-weight: normal, font-size: 20px;"did="username"></p>
+  <p style="font-weight: normal, font-size: 20px;"id="username"></p>
   <p style="margin-top: 0px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
   </div>
 
