--- a/invoice.html
+++ b/invoice.html
@@ -95,6 +95,16 @@
 .button-group button:hover {
   background-color: #0056b3;
 }
+       .label-row {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 12px;
+    margin: 8px 0;
+    gap: 1%;
+}
+    .label-row span:first-child {
+  width: 250px;  /* Atur agar semua label panjangnya sama */
+  text-align: left;
   </style>
 </head>
 <body>
