--- a/invoice.html
+++ b/invoice.html
@@ -227,7 +227,7 @@
     document.getElementById("invoice-number").innerText = invoiceNumber;
 
 
-    document.getElementById("grand-total").innerText = `Grand Total = ${formattedSubtotal}`;
+    document.getElementById("grand-total").innerText = `Grand Total : ${formattedSubtotal}`;
     document.getElementById("grand-total-text").innerText = `Note: ${textAmount} rupiahs`;
 
   const canvas = document.getElementById("signature-pad");
