--- a/invoice.html
+++ b/invoice.html
@@ -166,7 +166,7 @@
     const username = urlParams.get("username") || "";
     const clientName = urlParams.get("clientName") || "";
     const productionHouse = urlParams.get("productionHouse") || "";
-    const invoiceNumber = urlParams.get("InvoiceNumber") || "";
+    const invoiceNumber = urlParams.get("invoiceNumber") || "";
 
     function formatCurrency(value) {
       const num = parseFloat(value);
