--- a/invoice.html
+++ b/invoice.html
@@ -140,6 +140,11 @@
     </table>
 
     <div class="info-line"></div>
+    <div class="label-row">
+    <span>Grand Total</span>
+    <span>: <span id="grand-total"></span></span>
+    </div>
+  
     <div class="grand-total" id="grand-total"></div>
     <div class="note" id="grand-total-text"></div>
 
