--- a/invoice.html
+++ b/invoice.html
@@ -145,7 +145,7 @@
     <span>: <span id="grand-total"></span></span>
     </div>
   
-    <div class="note" id="grand-total-text"></div>
+    <div style="font-size: 12px;" class="note" id="grand-total-text"></div>
 
 
   <p style="margin-top: 30px; font-weight: normal; font-size: 15px;">Regards,</p>
