--- a/invoice.html
+++ b/invoice.html
@@ -125,7 +125,7 @@
     <table>
       <thead>
         <tr>
-          <th>Termin</th>
+          <th>Subject</th>
           <th>Description</th>
           <th>Amount</th>
         </tr>
