--- a/invoice.html
+++ b/invoice.html
@@ -240,7 +240,7 @@ const textAmount = toTitleCase(textAmountRaw);
     document.getElementById("invoice-number").innerText = invoiceNumber;
 
 
-    document.getElementById("grand-total").innerText = `Grand Total : ${formattedSubtotal}`;
+    document.getElementById("grand-total").innerText = `${formattedSubtotal}`;
     document.getElementById("grand-total-text").innerText = `Note : ${textAmount} Rupiahs`;
 
   const canvas = document.getElementById("signature-pad");
