--- a/quotation.html
+++ b/quotation.html
@@ -58,6 +58,12 @@
       color: white;
     }
 
+    .signature-pad {
+      border: 1px solid #000;
+      width: 50%;
+      height: 200px;
+      border-radius: 10px; /* ini bikin ujung tombol jadi membulat */
+    }
     .button-group {
       margin-top: 10px;
     }
@@ -127,7 +133,7 @@
   <span style="margin-bottom: 20px;">Subtotal Equipments</span>
   <span>: <span id="total-cost-orders"></span></span>
 </div>
-
+</div>
 
   <!-- Tabel Guard and Others -->
   <p style="margin-bottom: 0px; margin-top: 10px; font-size: 20px; font-weight: bold;">Guard and Others</p>
@@ -168,12 +174,18 @@
   <span>: <span id="grand-total"></span></span>
   </div>
 
-  <!-- Print Button -->
+  <!-- Signature Pad -->
+  <p style="margin-top: 30px; font-weight: normal; font-size: 15px;">Regards,</p>
+  <canvas id="signature-pad" class="signature-pad"></canvas>
   <div class="button-group">
+    <button onclick="clearSignature()">Clear</button>
+    <button onclick="saveSignature()">Save</button>
     <button onclick="window.print()">Print</button>
   </div>
+  <div id="saved-signature"></div>
+  <p id="username"></p>
+  <p style="margin-top: 0px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
 
-</div>
   <script>
     const urlParams = new URLSearchParams(window.location.search);
     const project = urlParams.get("project") || "";
@@ -283,6 +295,74 @@ Object.keys(groupedEquipment).forEach(category => {
       guardTableBody.appendChild(tr);
     });
 
+    // Signature pad
+    const canvas = document.getElementById("signature-pad");
+    const ctx = canvas.getContext("2d");
+    let drawing = false;
+    
+    canvas.width = canvas.offsetWidth;
+    canvas.height = canvas.offsetHeight;
+    ctx.lineWidth = 2;
+    ctx.lineJoin = "round";
+    ctx.lineCap = "round";
+    canvas.addEventListener("mousedown", startDraw);
+    canvas.addEventListener("mousemove", draw);
+    canvas.addEventListener("mouseup", endDraw);
+    canvas.addEventListener("touchstart", startDraw);
+    canvas.addEventListener("touchmove", draw);
+    canvas.addEventListener("touchend", endDraw);
+
+    function startDraw(e) {
+      drawing = true;
+      ctx.beginPath();
+      ctx.moveTo(getX(e), getY(e));
+      e.preventDefault();
+    }
+
+    function draw(e) {
+      if (!drawing) return;
+      ctx.lineTo(getX(e), getY(e));
+      ctx.stroke();
+      e.preventDefault();
+    }
+
+    function endDraw(e) {
+      drawing = false;
+      e.preventDefault();
+    }
+
+   function getCanvasRelativePosition(e) {
+  const rect = canvas.getBoundingClientRect();
+  const clientX = e.touches ? e.touches[0].clientX : e.clientX;
+  const clientY = e.touches ? e.touches[0].clientY : e.clientY;
+
+  return {
+    x: clientX - rect.left,
+    y: clientY - rect.top
+  };
+}
+
+function getX(e) {
+  return getCanvasRelativePosition(e).x;
+}
+
+function getY(e) {
+  return getCanvasRelativePosition(e).y;
+}
+
+    function clearSignature() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      document.getElementById("saved-signature").innerHTML = "";
+    }
+
+    function saveSignature() {
+      const dataURL = canvas.toDataURL();
+      const img = document.createElement("img");
+      img.src = dataURL;
+      img.style.maxWidth = "300px";
+      document.getElementById("saved-signature").innerHTML = "";
+      document.getElementById("saved-signature").appendChild(img);
+    }
   </script>
 </body>
 </html>
