--- a/quotation.html
+++ b/quotation.html
@@ -85,6 +85,9 @@
   text-align: left;
     }
     @media print {
+       .button-group {
+      display: none !important;
+    }
       th {
     background-color: black !important;
     -webkit-print-color-adjust: exact; /* untuk Chrome & Safari */
