--- a/invoice.html
+++ b/invoice.html
@@ -20,6 +20,11 @@
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
+         .header-line {
+    border-bottom: 2px solid black;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+  }
 
     h1 {
       text-align: center;
@@ -123,6 +128,7 @@
   <span>Invoice Number</span>
   <span>: <span id="invoice-number"></span></span>
   </div>
+    <div class="header-line"></div>
     <table>
       <thead>
         <tr>
