--- a/invoice.html
+++ b/invoice.html
@@ -115,7 +115,8 @@
 </head>
 <body>
   <div class="invoice-container">
-    <h1>INVOICE</h1> <strong id="logo-container" style="text-align: left; margin-bottom: 20px;"></strong>
+    <div id="logo-container" style="text-align: left; margin-bottom: 20px;"></div>
+    <h1>INVOICE</h1> 
   <div class="label-row">
   <span>Submitted To</span>
   <span>: <span id="client-name"></span></span>
