--- a/invoice.html
+++ b/invoice.html
@@ -248,7 +248,7 @@ const textAmount = toTitleCase(textAmountRaw);
     document.getElementById("client-name").innerText = clientName;
     document.getElementById("production-house").innerText = productionHouse;
     document.getElementById("invoice-number").innerText = invoiceNumber;
-    document.getElementById("logo-container").innerHTML = `<img src="${logo}" width="120">`;
+    document.getElementById("logo-container").innerHTML = logo;
 
 
     document.getElementById("grand-total").innerText = `${formattedSubtotal}`;
