--- a/invoice.html
+++ b/invoice.html
@@ -115,6 +115,9 @@
 </head>
 <body>
   <div class="invoice-container">
+    <div id="logo-container">
+    <img id="wgs-logo" src="https://storage.googleapis.com/glide-prod.appspot.com/uploads-v2/S13sj8xtWBiEXkgUeQZc/pub/VPXK7SWcli5VwFmfG0wr.png" alt="WGS Logo">
+  </div>
     <h1>INVOICE</h1> 
   <div class="label-row">
   <span>Submitted To</span>
