--- a/invoice.html
+++ b/invoice.html
@@ -11,6 +11,12 @@
       padding: 20px;
       background: #f5f5f5;
     }
+     #logo-container {
+      position: relative;
+      width: 100%;
+      height: 80px;
+      margin-bottom: -40px;
+    }
 
     .invoice-container {
       max-width: 800px;
