--- a/invoice.html
+++ b/invoice.html
@@ -17,7 +17,13 @@
       height: 80px;
       margin-bottom: -40px;
     }
-
+     #wgs-logo {
+      position: relative;
+      z-index: 1;
+      height: 20px;
+      width: 20px
+      margin-top: 15px;
+    }
     .invoice-container {
       max-width: 800px;
       margin: auto;
