--- a/invoice.html
+++ b/invoice.html
@@ -83,6 +83,14 @@
     height: 0 !important;
     visibility: hidden;
       }
+  .invoice-container {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: none;
+    }
 }
    .signature-pad {
   border: 2px dashed #ccc;
