--- a/quotation.html
+++ b/quotation.html
@@ -94,6 +94,14 @@
     print-color-adjust: exact;         /* untuk Firefox */
     color: white;
   }
+       .invoice-container {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: none;
+    }
     }
   </style>
 </head>
