--- a/invoice.html
+++ b/invoice.html
@@ -6,7 +6,7 @@
   <title>Invoice</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Calibri;
       margin: 0;
       padding: 20px;
       background: #f5f5f5;
