--- a/quotation.html
+++ b/quotation.html
@@ -125,7 +125,7 @@
 
 <div class="quotation-header">
   <div class="project-info">
-    <h2 id="project-name"></h2>
+    <h2 style="font-size: 30px; font-weight: bold;" id="project-name"></h2>
     <p><strong>Submitted To</strong><br><span id="client-name"></span></p>
     <p><strong>Production House/Company</strong><br><span id="production-house"></span></p>
     <p><strong>Quotation Number</strong><br><span id="quote-number"></span></p>
