--- a/quotation.html
+++ b/quotation.html
@@ -21,6 +21,7 @@
     border-bottom: 2px solid black;
     padding-bottom: 10px;
     margin-bottom: 20px;
+    margin-top: 0px;
   }
      h1 {
       margin-top: 10px;
@@ -88,14 +89,14 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
     .project-info {
   max-width: 70%;
 }
 
 .logo-header img {
-  width: 120px;
+  width: 200px;
   height: auto;
   object-fit: contain;
 }
