--- a/quotation.html
+++ b/quotation.html
@@ -90,13 +90,14 @@
   justify-content: space-between;
   align-items: flex-start;
   margin-bottom: 0px;
+  font-size: 14px;
 }
     .project-info {
   max-width: 70%;
 }
 
 .logo-header img {
-  width: 200px;
+  width: 170px;
   height: auto;
   object-fit: contain;
 }
@@ -126,7 +127,7 @@
 
 <div class="quotation-header">
   <div class="project-info">
-    <h2 style="font-size: 30px; font-weight: bold;" id="project-name"></h2>
+    <h2 style="font-size: 20px; font-weight: bold;" id="project-name"></h2>
     <p><strong>Submitted To</strong><br><span id="client-name"></span></p>
     <p><strong>Production House/Company</strong><br><span id="production-house"></span></p>
     <p><strong>Quotation Number</strong><br><span id="quote-number"></span></p>
