--- a/invoice.html
+++ b/invoice.html
@@ -191,7 +191,7 @@
     <button onclick="saveSignature()">Save</button>
     <button onclick="window.print()">Print</button>
   </div>
-  <div id="saved-signature"></div>
+  <div style="width: 60px;" id="saved-signature"></div>
   <p style="font-weight: normal, font-size: 20px;"id="username"></p>
   <p style="margin-top: 0px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
   </div>
