--- a/quotation.html
+++ b/quotation.html
@@ -153,7 +153,7 @@
 
   <!-- Tabel Guard and Others -->
   <p style="margin-bottom: 0px; margin-top: 10px; font-size: 20px; font-weight: bold;">Guard and Others</p>
-  <table id="guard-table">
+  <table style="margin-top: 0px;" id="guard-table">
     <thead>
       <tr>
         <th>Subject</th>
