--- a/quotation.html
+++ b/quotation.html
@@ -103,6 +103,16 @@
   height: auto;
   object-fit: contain;
 }
+    @media screen and (max-width: 768px) {
+  .label-row {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+    .logo-header img {
+       max-width: 80px;
+    margin-top: 10px;
+    }
+}
     @media print {
        .button-group {
       display: none !important;
