--- a/quotation.html
+++ b/quotation.html
@@ -117,6 +117,11 @@
        .button-group {
       display: none !important;
     }
+      .logo-header img {
+  width: 100px;
+  height: auto;
+  object-fit: contain;
+}
       th {
     background-color: black !important;
     -webkit-print-color-adjust: exact; /* untuk Chrome & Safari */
