--- a/quotation.html
+++ b/quotation.html
@@ -107,7 +107,13 @@
   .label-row {
     flex-direction: column;
     align-items: flex-start;
+    font-size: 9px;
   }
+    .label-row span:first-child {
+    width: 180px;  /* Atur agar semua label panjangnya sama */
+    text-align: left;
+    white-space: nowrap;
+    }
     .logo-header img {
        max-width: 80px;
     margin-top: 10px;
