--- a/quotation.html
+++ b/quotation.html
@@ -157,15 +157,18 @@
     <h2 style="font-size: 20px; font-weight: bold;" id="project-name"></h2>
     <div class="label-row">
   <span>Submitted To</span>
-  <span>: <span id="client-name"></span></span>
+  <span>:</span>
+  <span id="client-name"></span>
   </div>
   <div class="label-row">
   <span>Production House/Company</span>
-  <span>: <span id="production-house"></span></span>
+  <span>:</span> 
+  <span id="production-house"></span>
   </div>
   <div class="label-row">
   <span>Quotation Number</span>
-  <span>: <span id="quote-number"></span></span>
+  <span>:</span>
+  <span id="quote-number"></span>
   </div>
   </div>
   <div class="logo-header">
