--- a/quotation.html
+++ b/quotation.html
@@ -164,8 +164,8 @@
   <span>: <span id="production-house"></span></span>
   </div>
   <div class="label-row">
-  <span>Quotation Number</span></span>
-  <span>: <span id="quote-number"></span></span>
+  <span><span>Quotation Number</span></span>: <span id="quote-number"></span></span>
+ 
   </div>
   </div>
   <div class="logo-header">
