--- a/quotation.html
+++ b/quotation.html
@@ -164,7 +164,7 @@
   <span>: <span id="production-house"></span></span>
   </div>
   <div class="label-row">
-  <span><span>Quotation Number</span></span>: <span id="quote-number"></span></span>
+  <span>Quotation Number : <span id="quote-number"></span></span>
  
   </div>
   </div>
