--- a/quotation.html
+++ b/quotation.html
@@ -122,6 +122,12 @@
        max-width: 80px;
     margin-top: 10px;
     }
+      td {
+      border: 1px solid #000;
+      padding: 4px 6px; /* atas-bawah: 4px, kiri-kanan: 6px */
+      text-align: left;
+      font-size: 9px;
+    }
 }
     @media print {
        .button-group {
@@ -164,8 +170,9 @@
   <span>: <span id="production-house"></span></span>
   </div>
   <div class="label-row">
-  <span>Quotation Number : <span id="quote-number"></span></span>
- 
+  <span>Quotation Number</span>
+  <span>: <span id="quote-number"></span></span>
+  </div>
   </div>
   </div>
   <div class="logo-header">
