--- a/quotation.html
+++ b/quotation.html
@@ -80,7 +80,7 @@
     justify-content: flex-start;
     font-size: 12px;
     margin: 8px 0;
-    gap: 4px;
+    gap: 1%;
 }
     .label-row span:first-child {
     width: 250px;  /* Atur agar semua label panjangnya sama */
@@ -112,6 +112,7 @@
     white-space: nowrap;       /* jangan putus kalimat */
     overflow: hidden;
     text-overflow: ellipsis;   /* kasih "..." kalau kepanjangan */
+    gap: 1%;
   }
     .label-row span:first-child {
     width: 180px;  /* Atur agar semua label panjangnya sama */
@@ -126,7 +127,7 @@
       border: 1px solid #000;
       padding: 4px 6px; /* atas-bawah: 4px, kiri-kanan: 6px */
       text-align: left;
-      font-size: 9px;
+      font-size: 7px;
     }
 }
     @media print {
